fixed truck sizing on mobile

--- a/src/components/delivery-step-4/DeliverySection.module.css
+++ b/src/components/delivery-step-4/DeliverySection.module.css
@@ -261,8 +261,8 @@
   }
   
   .truckImage {
-    width: 40px;
-    height: 27px;
+    width: 140px;
+    height: 80px;
   }
   
   .markerLabel {
@@ -296,8 +296,8 @@
   }
   
   .truckImage {
-    width: 35px;
-    height: 23px;
+    width: 120px;
+    height: 68px;
   }
   
   .sectionTitle {
